# computional_linguistic

./: .gitignore  main.py  pyproject.toml
lab1/: dataset.ipynb  eval.ipynb  main.ipynb  plan.md  task1.txt
lab1_language_models/: inference.py  lstm.py  playground.ipynb  results.ipynb  train_lstm.py  train_transformer.py
lab2_tokenizers/: create_dataset.py  results.ipynb  sp.py  to_repotinfo.md  tokenizer.py  tokenizers.ipynb  train.py  transformer.py  whitespace.py
lab2_tokenizers/tokenizers/gpt2-pl/: merges.txt  special_tokens_map.json  tokenizer.json  tokenizer_config.json  vocab.json
lab2_tokenizers/tokenizers/sentencepiece/: added_tokens.json  special_tokens_map.json  spiece.model  (+1 more)
lab3_finetunning/: data.ipynb  finetune.ipynb  from_scratch.ipynb  models.ipynb  result.ipynb  scratch.ipynb
lab3_finetunning/results/: finetune_model_contrastive_training_metrics.csv  scratch_model_training_metrics.csv
lab3_finetunning_better/: data.ipynb  models.ipynb
lab3_finetunning_better/results/: contrastive_model_training_metrics.csv  finetune_model_training_metrics.csv
lab3_finetunning_deprecated/: finetune_training_logs.csv  scratch_training_logs.csv
lab4_flash_attention/: dataset.ipynb  dataset.py  measure_gpu.py  pyproject.toml  run.py  training.py  transformer.py
lab4_flash_attention/results/base/: final_training_data.json  gpu_memory.txt  metrics.csv
lab4_flash_attention/results/bfloat16/: final_training_data.json  gpu_memory.txt  metrics.csv
lab4_flash_attention/results/flash_attention_v2/: final_training_data.json  gpu_memory.txt  metrics.csv
lab4_flash_attention/results/windowed/: final_training_data.json  gpu_memory.txt  metrics.csv
lab5_few_shot/: main.ipynb  pyproject.toml  t.json
lab5_few_shot/configs/: config.yaml  deepseek_config.yaml  phi_config.yaml
lab5_few_shot/llm-server/: run.py
lab5_few_shot/llm-server/src/: app.py  config.py  dto.py  inference.py  logger.py
lab5_few_shot/report/: main.tex  references.bib
lab6_trm/: create_dataset.py  eval.py  eval_llm.py  lion.py  pyproject.toml  run_training.sh  tango.py  train.py  trm.py
language_models/: bigram.py  main.ipynb  results.ipynb  train_lstm.py  train_transformer.py  training.py  transformer.py
lstm/: data.py  logger.py  lstm_model.py  run.py  training.py  utils.py
metrics/: metrics.csv
(+2 files in other folders)
