[project]
name = "computional-linguistic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "speakleash>=0.3.51",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "transformers>=4.57.0",
]
