[project]
name = "computional-linguistic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "sacremoses>=0.1.1",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "speakleash>=0.3.51",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchmetrics>=1.8.2",
    "tqdm>=4.67.1",
    "transformers>=4.57.0",
]
