[project]
name = "lab6-trm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "torch==2.5.1",
    "transformers>=4.30.0",
    "tqdm>=4.64.0",
    "jupyter",
    "markupsafe<3.0",
    "zstandard>=0.22.0",
    "pandas>=2.3.3",
    "torchmetrics>=1.8.2",
    "matplotlib>=3.10.7",
    "wandb",
    "datasets>=2.16.0",
    "pyarrow>=12.0.0",
]
